fixing bottom gap height

--- a/client/src/components/mainBody/mainBody.css
+++ b/client/src/components/mainBody/mainBody.css
@@ -26,7 +26,7 @@
 
 @media  (max-width: 576px) {
     #bottom-gap {
-        height: 3.8rem;
+        height: 3rem;
     }
 }
 
